# openSUSE-docs-revamped-temp

./: .gitignore  .pypspelling.yml  404.html  CONTRIBUTING.md  Pipfile  README.md  ToC.md  index.html  pyproject.toml  requirements.txt  sitemap.xml  styles.css  wikis_top5.md
.github/workflows/: build-deploy.yml
alternative_procurement/: index.html
best_of_post/: index.html
bluetooth/: index.html
codecs/: index.html
dictionary/: en-custom.txt
hybrid_graphics/: index.html
image_choice/: index.html
install_podman/: index.html
install_proprietary/: index.html
kde/: index.html
kdeconnect/: index.html
microos_getting_started/: index.html
pick_an_image/: index.html
pipewire/: index.html
power/: index.html
printersetc/: index.html
project/: dnf.md  mkdocs.yml  troubleshooting.md
project/docs/: alternative_procurement.md  best_of_post.md  bluetooth.md  codecs.md  desktop_choice.md  dnf.md  hybrid_graphics.md  image_choice.md  index.md  install_podman.md  install_proprietary.md  kde.md  kdeconnect.md  markdown.md  media_choice.md  microos_getting_started.md  pick_an_image.md  pipewire.md  power.md  printersetc.md  reference_docs.md  safety_usability.md  snapper.md  source_rpms_flaks_appimages.md  todo.md  tw-cli.md  updating_upgrading.md  updating_upgrading_reverting.md  zstd.md  (+2 more)
reference_docs/: index.html
safety_usability/: index.html
search/: search_index.json
snapper/: index.html
todo/: index.html
tw-cli/: index.html
updating_upgrading_reverting/: index.html
yast_installer/: index.html
zstd/: index.html
zypper/: index.html
(+2 files in other folders)
