[tool.poetry]
name = "opensuse-docs-revamped-temp"
version = "0.3.1"
description = "openSUSE documentation"
authors = ["Onuralp SEZER <thunderbirdtr@fedoraproject.org>"]

[tool.poetry.dependencies]
python = "^3.6"
mkdocs = "^1.1.2"
mkdocs-material = "^7.1.1"
mkdocs-git-revision-date-plugin = "^0.3.1"
mkdocs-versioning = "^0.4.0"
mkdocs-pdf-export-plugin = "^0.5.10"


[tool.poetry.dev-dependencies]
pyspelling = "^2.7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
